# lead-discovery-platform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  alembic.ini  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 20260308_a1b2c3d4e5f6_initial_domain_schema.py  20260309_b2c3d4e5f6a1_add_discovery_geo_fields.py  20260312_c3d4e5f6a1b2_phase2_scraper_schema.py  20260314_d4e5f6a1b2c3_phase41_contact_normalized_name_key.py  20260315_e5f6a1b2c3d4_phase7_pipeline_runs.py  20260322_f6a1b2c3d4e5_rename_specialty_to_niche.py  20260323_a1b2c3d4e5f6_multi_city_ecommerce_discovery.py  20260323_b2c3d4e5f6a7_ecommerce_platform.py  20260510_5a8684f5817f_add_campaign_goal_has_website.py  20260511_688f1b33f9de_add_search_geo_scope.py  20260512_86f4acea0834_add_tiling_and_query_variants.py
docs/: architecture.md  database-schema.md  ecommerce-discovery.md  export-design.md  extraction-pipeline.md  extraction-strategy.md  known-risks.md  phase-1-plan.md  pipeline.md  scoring-model.md  scraper-design.md
docs/plans/: 2026-03-08-domain-models.md  2026-05-10-autonomous-agent.md  2026-05-10-web-agency-campaign-goal.md  2026-05-11-query-expansion-filters.md  2026-05-13-playwright-browser-fallback.md  2026-05-13-volume-and-llm-routing.md  2026-05-13-yelp-and-enrichment.md  2026-05-19-hunter-linkedin-enrichment.md
scripts/: create_demo_campaigns.py
src/: cli.py
src/config/: runtime.py  settings.py
src/dashboard/: app.py  auth.py  deps.py  log_capture.py  persistence.py  tasks.py
src/db/: __init__.py  base.py  session.py
src/discovery/: city_lists.py  discover.py  places.py  query_expansion.py  runner.py  shopify.py  strategies.py  upsert.py  web_runner.py  web_search.py  yelp.py
src/enrichment/: __init__.py  hunter.py  linkedin_lookup.py  runner.py  smtp_prober.py
src/export/: exporter.py  formatters.py  runner.py  writer.py
src/extraction/: deterministic.py  extraction.py  extractor.py  linker.py  llm.py  merge.py  models.py  persist.py  runner.py
src/models/: __init__.py  audit_log.py  campaign.py  company.py  company_lead.py  company_page.py  contact.py  discovery_hit.py  email.py  enums.py  lead.py  run.py  (+6 more)
tests/: conftest.py  test_cli.py
(+82 files in other folders)
