[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-discovery"
version = "0.1.0"
description = "Automated lead discovery platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.12",
    "lxml>=5.0",
    "phonenumbers>=8.13",
    "anthropic>=0.25",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
]

[project.scripts]
leads = "src.cli:app"
leads-ui = "src.dashboard.app:start"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # coroutine 'to_thread' never awaited: test artifact from patching asyncio.create_task
    # in task registry tests. At runtime the coroutine is consumed by create_task.
    "ignore:coroutine 'to_thread' was never awaited:RuntimeWarning",
]
